# prism-forge

./: .gitignore  2025-12-30-caveat-the-messages-below-were-generated-by-the-u-02.txt  2025-12-30-caveat-the-messages-below-were-generated-by-the-u-04.txt  2026-01-05-tauri-2-react-18-typescript-01.txt  CLAUDE.md  COMMIT_MESSAGE.md  DEBUG_EMPTY_SESSION.md  DEBUG_STRUCTURE_CHECK.md  FEATURE_DEV_PROGRESS.md  FILE_PATH_PARAMETER_FIX.md  HOW_TO_VIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_JSON_COMPATIBILITY_FIX.md  MULTI_LANGUAGE_PHASE_3_COMPLETE.md  MULTI_LEVEL_LOG_READING_SUMMARY.md  MULTI_LEVEL_VIEW_USAGE.md  PROTOTYPE_VISUAL.md  PrismForge UI 架构示意图.txt  README.md  RUST_PATH_RESOLUTION_GUIDE.md  SERDE_FIX_FINAL_REPORT.md  SERDE_FIX_SUMMARY.md  SERDE_FIX_VERIFICATION_GUIDE.md  SESSIONS_I18N_COMPLETE.md  SESSION_DETAIL_UI_REDESIGN_SUMMARY.md  SESSION_MANAGEMENT_PROTOTYPE.md  TEMPLATE_REQUIREMENTS_ANALYSIS.md  TIME_DISPLAY_FIX_SUMMARY.md  TROUBLESHOOTING.md  claude-session-summary-rust-implementation.md  claude-session-type-detection-rust.md  dev_plan.json  fix-ui-cache.bat  index.html  package-lock.json  package.json  playwright.config.ts  prompt-version-manager-preview.html  rebuild-exe.ps1  (+14 more)
src-tauri/: Cargo.toml  librust_out.rlib  optimizer_config.toml  tauri.conf.json  test_db.rs  test_toml.rs
src-tauri/capabilities/: default.json
src-tauri/docs/: OPERATIONS.md  command-registration-guide.md
src-tauri/proptest-regressions/command_registry/: tests.txt
src-tauri/proptest-regressions/database/: repository.txt
src-tauri/src/: build_types.rs  command_wrapper.rs  commands.rs  commands_prompt.rs  commands_prompt_versions.rs  filter_config.rs  lib.rs  logging.rs  main.rs  perf.rs  qa_pair_debug.rs  session_parser.rs  session_parser_tests.rs  session_reader.rs  session_type_detector.rs  startup.rs  tokenizer.rs
src-tauri/src/command_registry/: diagnostic.rs  error_handler.rs  errors.rs  initializer.rs  integration_tests.rs  mod.rs  registry.rs  tests.rs  validator.rs
src-tauri/src/database/: decision_analysis_repository.rs  decision_keywords.rs  init.rs  init_default_prompts.rs  intent_analysis_repository.rs  migrations.rs  mod.rs  models.rs  prompt_versions.rs  prompt_versions.rs.bak  prompts.rs  repositories_tech_stack.rs  repository.rs  repository.rs.backup  vector_repository.rs
src-tauri/src/embedding/: generator.rs  mod.rs  openai_embeddings.rs  sync.rs
src-tauri/src/intent_analyzer/: decision_analyzer.rs  decision_detector.rs  language.rs  mod.rs  opening_intent.rs  qa_detector.rs  tech_stack_detector.rs
src-tauri/src/llm/: interface.rs  key_rotation.rs  manager.rs  mod.rs  security.rs  (+1 more)
src-tauri/tests/: performance_vector.rs  prompt_history_test.rs  vector_integration_test.rs
(+212 files in other folders)
