[package]
name = "prism-forge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "prism-forge"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
async-openai = "0.25"
keyring = { version = "3.0", features = ["windows-native"] }
secrecy = "0.10"
thiserror = "2.0"
anyhow = "1.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.2"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
tiktoken-rs = "0.6"
regex = "1.10"

# fastembed 在 Windows 上有编译问题，暂时禁用
# TODO: 等待上游修复后重新启用
# fastembed = "3.3"
notify = "6.1"

[dev-dependencies]
proptest = "1.4"

[[bin]]
name = "test_db"
path = "bin/test_db.rs"

[[bin]]
name = "test_init"
path = "bin/test_init.rs"
